<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="196dp"
              android:layout_height="wrap_content"
              android:background="@drawable/popupwindow_background">

    <RelativeLayout
        android:id="@+id/menu_remove_trust_contact"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/popupwindow_menuitem">

        <TextView
            style="@style/list_primary_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_menu_remove_trust_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_l"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu_check_backup_status"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/popupwindow_menuitem">
        <TextView
            style="@style/list_primary_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_backup_update_backup_status"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_l"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu_log_out"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/popupwindow_menuitem">
        <TextView
            style="@style/list_primary_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_menu_log_out_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_l"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</LinearLayout>