<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:animateLayoutChanges="true"
    android:background="@drawable/wallet_background"
    android:clipToPadding="false"
    android:descendantFocusability="beforeDescendants"
    android:filterTouchesWhenObscured="true"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".backup.SocialBackupIntroductionActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_introduction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="57.5dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center_horizontal"
            android:text="@string/backup_introduction_title"
            android:textColor="#ffffff"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_introduction_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/M1"
            android:layout_marginEnd="30dp"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center_horizontal"
            android:text="@string/backup_introduction_sub_title"
            android:textColor="#ffffff"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_introduction_title"/>

        <ImageView
            android:id="@+id/iv_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_sub_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="@dimen/M1"
            android:layout_marginEnd="0dp"
            android:background="@drawable/wallet_oobe_social_backup"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_title"/>

        <LinearLayout
            android:id="@+id/ll_part1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_display"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/M1"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_display">

            <TextView
                android:id="@+id/tv_first_warning_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="4.5dp"
                android:fontFamily="@string/font_family_regular"
                android:gravity="center_horizontal"
                android:text="@string/backup_introduction_first_warning_title"
                android:textColor="#ffffff"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_first_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/backup_introduction_first_warning"
                android:textColor="#ffffff"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_part2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_part1"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/M1"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_part1">

            <TextView
                android:id="@+id/tv_second_warning_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="4.5dp"
                android:fontFamily="@string/font_family_regular"
                android:gravity="center_horizontal"
                android:text="@string/backup_introduction_second_warning_title"
                android:textColor="#ffffff"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tv_second_warning"
                android:layout_width="wrap_content"
                android:layout_height="81.25dp"
                android:layout_below="@id/tv_second_warning_title"
                android:layout_centerHorizontal="true"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/backup_introduction_second_warning"
                android:textColor="#ffffff"
                android:textSize="15sp"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_setup"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="@dimen/socialkm_button_height"
            android:layout_below="@id/ll_part2"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/M1"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_social_backup_intro_setup_button"
            android:fontFamily="@string/font_family_regular"
            android:foreground="@drawable/shape_social_backup_intro_setup_button_overlay"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/backup_introduction_setup"
            android:textAllCaps="false"
            android:textColor="#f7b66a"
            android:textSize="14.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_part2"/>

        <TextView
            android:id="@+id/tv_not_now"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/M1"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/backup_introduction_exit"
            android:textColor="#ffffff"
            android:textColorLink="#ffffff"
            android:textSize="14.5sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_setup"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
