<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/verification_request_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_request_title"
                style="@style/verification_request_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginEnd="30dp"
                android:text="@string/ver_content_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_step1"
                style="@style/verification_request_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_request_title"
                android:layout_marginStart="30dp"
                android:layout_marginTop="@dimen/M1"
                android:layout_marginEnd="30dp"
                android:text="@string/ver_step1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_request_title"/>

            <EditText
                android:id="@+id/et_enter_name"
                style="@style/verification_edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_step1"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/ver_enter_name_hint"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:theme="@style/verification_edittext_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_step1"/>

            <Button
                android:id="@+id/btn_send_request"
                style="@style/verification_request_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/socialkm_button_height"
                android:layout_marginStart="30dp"
                android:layout_marginTop="@dimen/M1"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="@dimen/M1"
                android:enabled="false"
                android:text="@string/ver_request_btn_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_enter_name"
                app:layout_constraintVertical_bias="1.0"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</RelativeLayout>